--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,9 @@ server:
 spring:
   profiles:
     active: dev
+
+swagger:
+  config:
+    enabled: true
+    urlTemplating: true
+    forCodeGen: true
