--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,6 +22,7 @@ spring:
       connection-test-query: SELECT 1
       connection-init-sql: SELECT 1 FROM DUAL
       schema: examples
+      max-lifetime: 1200000
     url: jdbc:mysql://39.107.244.193:3306/examples?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
   # redis 配置
   redis:
