添加程序启动自动打开swagger2,可配置

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -50,3 +50,14 @@ logging:
   level:
     org.zuoyu.examples: debug
     org.springframework: info
+
+swagger:
+  config:
+    enabled: true
+    urlTemplating: false
+    forCodeGen: false
+
+browser:
+  auto:
+    enable: true
+    url: ""
