--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8080
   servlet:
-    context-path: /
+    context-path: /zuoyu
   tomcat:
     # tomcat的URI编码
     uri-encoding: UTF-8
@@ -16,8 +16,3 @@ spring:
   profiles:
     active: dev
 
-swagger:
-  config:
-    enabled: true
-    urlTemplating: false
-    forCodeGen: true
